[package]
name = "symphonia-codec-unsafe-libopus"
version = "0.1.0"
edition = "2021"

[dependencies]
symphonia-core = { git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6" }
opus = { git = "https://github.com/hazelmeow/opus-rs.git", branch = "unsafe-libopus" }

[dev-dependencies]
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6" }
hound = "3.5.1"
